修改数据库连接

--- a/src/main/resources/conf/app.properties
+++ b/src/main/resources/conf/app.properties
@@ -2,20 +2,9 @@
 ############################
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/wxdb?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/minchatdb?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=123456
-
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/wxdb?useUnicode=true&amp;characterEncoding=utf-8
-#jdbc.username=root
-#jdbc.password=123456
-
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://tvitest001.mysql.rds.aliyuncs.com:3306/tvidb?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=round
-#jdbc.username=tvi
-#jdbc.password=Testw0rd123
-
 
 ###########################
 genId.adjust=3
